menambahkan file contact.html

--- a/menu/templates/aku.html
+++ b/menu/templates/aku.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/members">HOME</a>
+    <a href="/index">HOME</a>
     <h1>MINUMAN</h1>
     <ul>
         <li>es teh 3k</li>
