--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -9,7 +9,6 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
-
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -61,8 +60,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
                         <div class="dropdown-menu m-0">
-                            <a href="Produk.html" class="dropdown-item">Makanan</a>
-                            <a href="Produk.html" class="dropdown-item">Minuman</a>
+                            <a href="produk/" class="dropdown-item">Makanan</a>
+                            <a href="aku/" class="dropdown-item">Minuman</a>
                         </div>
                 </div>
                         <div class="nav-item dropdown">
