--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tempat Makan Bakso Bejo\Lailatul Mamlu'ah</title>
+    <title>PP.Bustanul Ulum</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -48,7 +48,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Rumah makan</h1>
+                    <h1 class="text-primary m-0"></h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,12 +56,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="index.html" class="nav-item nav-link active">Rumah</a>
+                        <a href="index.html" class="nav-item nav-link active">BERANDA</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">PENDAFTARAN</a>
                         <div class="dropdown-menu m-0">
-                            <a href="produk/" class="dropdown-item">Makanan</a>
-                            <a href="aku/" class="dropdown-item">Minuman</a>
+                            <a href="formulir/" class="dropdown-item">Siswa Baru</a>
+                            <a href="aku/" class="dropdown-item">Santri Baru</a>
                         </div>
                 </div>
                         <div class="nav-item dropdown">
