mengubah nama file produk.html menjadi pondok.html

--- a/menu/templates/formulir.html
+++ b/menu/templates/formulir.html
@@ -50,7 +50,7 @@
 <body>
 
     <form id="registrationForm" onsubmit="submitForm(event)">
-        <label for="biodata siswa/SISWI">BIODATA SISWA/SISWI</label>
+        <label for="biodata siswa/SISWI">BIODATA SANTRI</label>
 
         <label for="name">Nama:</label>
         <input type="text" id="name" name="name" required>
@@ -70,10 +70,13 @@
         <label for="jumlah saudara">Jumlah Saudara:</label>
         <input type="text" id="jumlah saudara" name="jumlah saudara" required>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        
+
+
         <label for="orang tua/wali">ORANG TUA/WALI</label>
+
+        <label for="nama ayah">Nama Ayah:</label>
+        <input type="text" id="nama ayah" name="nama ayah" required>
+
 
         <button type="submit">Daftar</button>
         <button type="submit">Kembali</button>
