--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -58,34 +58,30 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link active">BERANDA</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">PENDAFTARAN</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">PENDIDIKAN</a>
                         <div class="dropdown-menu m-0">
-                            <a href="formulir/" class="dropdown-item">Siswa Baru</a>
-                            <a href="aku/" class="dropdown-item">Santri Baru</a>
+                            <a href="pondok/" class="dropdown-item">Pendidikan Ammiyah</a>
+                            <a href="aku/" class="dropdown-item">Pendidikan Diniyah</a>
                         </div>
                 </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Halaman</a>
-                            <div class="dropdown-menu m-0">
-                                <a href="booking.html" class="dropdown-item">Pemesanan</a>
-                            </div>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">TENTANG KAMI</a>
                         </div>
+                        
                         <a href="contact.html" class="nav-item nav-link">Kontak</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Memesan Meja</a>
+                    <a href="formulir/" class="btn btn-primary py-2 px-4">PENDAFTARAN</a>
                 </div>
             </nav>
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class="row align-items-center g-5">
-                        <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="display-3 text-white animated slideInLeft"><br>Bakso Bejo</h1>
-                            <p class="text-white animated slideInLeft mb-4 pb-2">Jl. Cokroatmojo No.11-23, Gladak Anyar, Kec. Pamekasan, Kabupaten Pamekasan, Jawa Timur 69317, Indonesia </p>
+                        <div class="col-lg-8 text-center text-lg-start">
+                            <h1 class="display-3 text-white animated slideInLeft"><br>PP.Bustanul Ulum Sumber Anom</h1>
+                            <p class="text-white animated slideInLeft mb-4 pb-2">Desa.Angsanah Kec.Palengaan Kab.Pamekasan </p>
                         </div>
-                        <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/ibra.png' %}" alt="">
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -97,45 +93,32 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="row g-5 align-items-center">
-                    <div class="col-lg-6">
-                        <div class="row g-3">
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="{% static 'img/rafa.jpg' %}" style="margin-top: 50%;">
+                    
+                    <div class="col-lg-15">
+                        <style>
+                            .center {
+                              text-align: center;
+                              margin-top: 50px; /* Adjust as needed */
+                            }
+                          </style>
+                            <div class="center">
+                                <h5 class="section-title ff-secondary text-start text-primary fw-normal">Tentang Kami</h5>
+                                <h1 class="mb-4"> <i class="utensils text-primary me-2"></i>PP.Bustanul Ulum Sumber Anom</h1>
                             </div>
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="{% static 'img/saya.jpeg' %}" style="margin-top: 50%;">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="{% static 'img/imut.jpeg' %}">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="{% static 'img/manis.jpg' %}">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Tentang</h5>
-                        <h1 class="mb-4">Selamat datang di <i class="fa fa-utensils text-primary me-2"></i>Rumah makan bakso bejo</h1>
-                        <p class="mb-4">Bakso bejo adalah tempat makan yang berada di daerah pamekasan, tempatnya memang kecil tapi soal rasa memang sangatlah enak.</p>
-                        <p class="mb-4">banyak orang yang mampir untuk makan di tempat makan bakso bejo tersebut, harganya juga terjangkau sesuai menu yang di pilih, bukan hanya makanan yang ada di sana tapi juga ada berbagai minuman.</p>
+                        <p class="mb-4">Pondok pesantren bustanul ulum sumber anom angsanah adalah pondok pesantren yg didirikan oleh KH ROFII pada tahun 1920M.tepatnya ada di dusun sumber anom desa angsanah kecamatan palengaan kota pamekasan madura.usia pesantren ini sangatlah tua, karna ditahun 2019 ini, pp sumber anom ini sudah mencapai usia 99 tahun.dalam kurun waktu 99 tahun ini, pp sumber anom sudah mengalami pergantian pengasuh sebanyak empat kali.pengasuh pertama atau pendiri pondok ini adalah KH ROFII, yang kemudian digantikan oleh KH TOYYIB ROFII, Kemudian digantikan oleh adik beliau KH HASYIM ROFII sebagai pengasuh ke 3.dan pengasuh sekarang yaitu KH TAUFIQ HASYIM MP.d yang sekaligus menjabat sebagai ketua tanfidziyah PCNU PAMEKASAN.</p>
+                        <p class="mb-4">Pondok Pesantren yang memiliki Santri mulai dari PAUD, RA, MI, MTS, MA dan SMK. Pondok ini dipimpin oleh Kyai Haji Raden Taufiq Hasyim, M. Pd. Dan para Ustad dan Ustadzah yang sangat berpengalaman dalam mendidik santri dengan sabar dan kasih sayang, selain itu tempatnya memadai untuk para santri.</p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">100</h1>
                                     <div class="ps-4">
-                                        <p class="mb-0">Bertahun-tahun</p>
-                                        <h6 class="text-uppercase mb-0">Pengalaman</h6>
+                                        <p class="mb-0">Tahun Berdiri</p>
+                                        <h6 class="text-uppercase mb-0"></h6>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
-                                    <div class="ps-4">
-                                        <p class="mb-0">Populer</p>
-                                        <h6 class="text-uppercase mb-0">Master Chef</h6>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <a class="btn btn-primary py-3 px-5 mt-2" href="">Baca Selengkapnya</a>
