menambahkan file home.html

--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -56,7 +56,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="index.html" class="nav-item nav-link active">BERANDA</a>
+                        <a href="home/" class="nav-item nav-link active">BERANDA</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">PENDIDIKAN</a>
                         <div class="dropdown-menu m-0">
@@ -130,26 +130,13 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Pendidikan</h5>
+                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Sarana dan Prasarana</h5>
                     
                 </div>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
-                                <div class="ps-3">
-
-                                    <h6 class="mt-n1 mb-0">Pendidikan Ammiyah</h6>
-                                </div>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
-                                <div class="ps-3">
-                                    
-                                    <h6 class="mt-n1 mb-0">Pendidikan Diniyah</h6>
-                                </div>
                             </a>
                         </li>
                     </ul>
@@ -161,7 +148,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-1.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>PAUD (Pendidikan anak usia dini)</span>
+                                                <span>Gedung Sekolah</span>
                                             </h5>
                                         
                                         </div>
@@ -172,7 +159,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-2.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>Mdrasah Ula</span>
+                                                <span>Kamar/Asrama</span>
                                             </h5>
                                             
                                         </div>
@@ -183,7 +170,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>RA (Raudlatul Atfal)</span>
+                                                <span>Pet Minum</span>
                                             </h5>
                                         </div>
                                     </div>
@@ -193,7 +180,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-4.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>Madrasah Wustho</span>
+                                                <span>Seragam Sekolah/Pondok</span>
                                             </h5>
                                             
                                         </div>
@@ -204,7 +191,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-5.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>MI (Madrasah Ibtidaiyah)</span>
+                                                <span>Musholla/Tempat Beribadah</span>
                                             </h5>
                                             
                                         </div>
@@ -215,7 +202,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-6.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>Madrasah Ulya</span>
+                                                <span>Kamar Mandi</span>
                                             </h5>
                                         </div>
                                     </div>
@@ -225,7 +212,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>MTS (Madrasah Tsanawiyah)</span>
+                                                <span>Toilet</span>
                                             </h5>
                                         </div>
                                     </div>
@@ -235,37 +222,7 @@
                                         <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span></span>
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
-                                        <div class="w-100 d-flex flex-column text-start ps-4">
-                                            <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>MA (Madrasah Aliyah)</span>
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
-                                        <div class="w-100 d-flex flex-column text-start ps-4">
-                                            <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span></span>
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/menu-3.jpg" alt="" style="width: 80px;">
-                                        <div class="w-100 d-flex flex-column text-start ps-4">
-                                            <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>SMK (Sekolah menengah kejuruan)</span>
+                                                <span>Koprasi/Kantin</span>
                                             </h5>
                                         </div>
                                     </div>
