--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -30,7 +30,7 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
                         <a href="program/" class="nav-item nav-link">PROGRAM</a>
                     </div>
-                    <a href="form/" class="btn btn-primary py-2 px-4">PENDAFTARAN</a>
+                    <a href="list/" class="btn btn-primary py-2 px-4">PENDAFTARAN</a>
                 </div>
             </nav>
 
@@ -95,7 +95,7 @@
                         <style>
                             .center {
                               text-align: center;
-                              margin-top: 50px; /* Adjust as needed */
+                              margin-top: 100px; /* Adjust as needed */
                             }
                           </style>
                             <div class="center">
