--- a/menu/static/css/style.css
+++ b/menu/static/css/style.css
@@ -150,15 +150,15 @@
 }
 
 
-/*** busa Header ***/
-.busa-header {
+/*** bg-busa Header ***/
+.bg-busa-header {
     background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/bg-busa.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.busa-header img {
+.bg-busa-header img {
     animation: imgRotate 50s linear infinite;
 }
 
