--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -30,7 +30,7 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="">
+    <link href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -95,11 +95,12 @@
                         <style>
                             .center {
                               text-align: center;
-                              margin-top: 100px; /* Adjust as needed */
+                              margin-top: 50px; 
                             }
+
                           </style>
                             <div class="center">
-                                <h5 class="section-title ff-secondary text-start text-primary fw-normal">Tentang Kami</h5>
+                                <h5 class="section-title ff-secondary text-start text-primary fw-normal"></h5>
                                 <h1 class="mb-4"> <i class="utensils text-primary me-2"></i>PP.Bustanul Ulum Sumber Anom</h1>
                             </div>
                         <p class="mb-4">Pondok pesantren bustanul ulum sumber anom angsanah adalah pondok pesantren yg didirikan oleh KH ROFII pada tahun 1920M.tepatnya ada di dusun sumber anom desa angsanah kecamatan palengaan kota pamekasan madura.usia pesantren ini sangatlah tua, karna ditahun 2019 ini, pp sumber anom ini sudah mencapai usia 99 tahun.dalam kurun waktu 99 tahun ini, pp sumber anom sudah mengalami pergantian pengasuh sebanyak empat kali.pengasuh pertama atau pendiri pondok ini adalah KH ROFII, yang kemudian digantikan oleh KH TOYYIB ROFII, Kemudian digantikan oleh adik beliau KH HASYIM ROFII sebagai pengasuh ke 3.dan pengasuh sekarang yaitu KH TAUFIQ HASYIM MP.d yang sekaligus menjabat sebagai ketua tanfidziyah PCNU PAMEKASAN.</p>
